// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monthly donation renders correctly 1`] = `
.c9 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c10 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.25rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 1rem;
}

.c21 {
  font-size: 1.5rem;
  line-height: 1.5rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c25 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c30 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: 500;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  height: 100%;
}

.c3 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c23 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
  width: 100%;
}

.c26 {
  margin-bottom: 0.5rem;
}

.c28 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c28:focus {
  border: 1px solid #666;
}

.c27 {
  position: relative;
  font-size: 1.25rem;
}

.c24 {
  display: block;
}

.c24 input {
  border: none;
  background-color: #BECCF9;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 10px;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  height: auto;
}

.c24 input:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #0565D1;
}

.c24 input:active:focus {
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c0 {
  background-color: #274084;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
}

.c2 {
  border: 1px solid red;
  height: calc(70px + 35vw);
}

.c5 {
  display: none;
}

.c6 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c8 {
  position: relative;
  text-align: left;
}

.c11 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c18 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 10px;
  margin-top: 1rem;
}

.c18 h3 {
  margin-top: 1rem;
}

.c18 input {
  max-width: 100%;
  margin: 0;
}

.c18 input[type='submit'] {
  margin: 2rem 0;
}

.c19 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c19 input[type='submit'] {
  margin-bottom: 0;
}

.c20 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 2rem;
}

.c22 label {
  -webkit-flex: 0 0 30%;
  -ms-flex: 0 0 30%;
  flex: 0 0 30%;
  margin-bottom: 0.5rem;
}

.c22 label input {
  cursor: pointer;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c31 {
  margin-right: 0.5rem;
}

.c32 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c32 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c32 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 10px;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c32 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c33 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c33:active,
.c33:focus,
.c33:hover {
  outline: none;
  background-color: #961D35;
}

.c17 {
  width: 50%;
  height: 48px;
  border-radius: 2rem;
  z-index: 1;
  display: block;
  position: absolute;
  -webkit-transition: left 0.15s ease-out;
  transition: left 0.15s ease-out;
  background-color: #0565D1;
  left: 2px;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem 0;
}

.c13 {
  width: 100%;
  padding: 2px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 1rem 0;
  border-radius: 2rem;
  background: #BECCF9;
}

.c13 #give-monthly:checked ~ .c16 {
  left: calc(50% - 2px);
}

.c13 input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c13 input:focus:not(:checked) + label {
  box-shadow: inset 0 0 0 4px #0565D1;
}

.c14 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  border: none;
  -webkit-transition: color 0.15s ease-out;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: default;
}

.c14:active:focus {
  box-shadow: none;
}

.c14:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #0565D1;
}

.c14[for='give-once'] {
  border-radius: 2rem;
  color: #FFFFFF;
}

.c14[for='give-monthly'] {
  border-radius: 2rem;
  color: #FFFFFF;
}

.c15 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  border: none;
  -webkit-transition: color 0.15s ease-out;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: pointer;
}

.c15:active:focus {
  box-shadow: none;
}

.c15:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #0565D1;
}

.c15[for='give-once'] {
  border-radius: 2rem;
  color: #000000;
}

.c15[for='give-monthly'] {
  border-radius: 2rem;
  color: #000000;
}

@media (min-width:740px) {
  .c10 {
    font-size: 1.25rem;
  }
}

@media (min-width:740px) {
  .c28 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c24 input {
    font-size: 2rem;
    padding: 1.5rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: inherit;
    -webkit-justify-content: inherit;
    -ms-flex-pack: inherit;
    justify-content: inherit;
  }
}

@media (min-width:1024px) {
  .c2 {
    display: none;
  }
}

@media (min-width:1024px) {
  .c5 {
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    opacity: 0.4;
  }
}

@media (min-width:740px) {
  .c6 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c18 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c19 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c22 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {
  .c22 label {
    margin-bottom: 0;
  }
}

@media (min-width:740px) {
  .c32 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c33 {
    padding: 1rem 2rem;
  }
}

@media (min-width:740px) {
  .c13 {
    width: 450px;
    margin: 0 auto;
  }
}

<div
  className="c0"
  id="mship-1"
>
  <div
    className="c1 c2"
    height="100%"
    width="100%"
  >
    <img
      alt="Background image"
      className="c3 lazyload"
      data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
      data-sizes="auto"
      data-src={null}
      data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
      height="100%"
      src={null}
      srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      width="100%"
    />
  </div>
  <div
    className="c4 c5"
    height="100%"
    width="100%"
  >
    <img
      alt="Background image"
      className="c3 lazyload"
      data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
      data-sizes="auto"
      data-src={null}
      data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
      height="100%"
      src={null}
      srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      width="100%"
    />
  </div>
  <div
    className="c6"
  >
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <h2
          className="c9"
          color="white"
          size="big"
        >
          Donate Now
        </h2>
        <p
          className="c10"
          color="white"
          size="m"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c11"
    >
      <div
        className="c12"
      >
        <div
          className="c13"
        >
          <input
            aria-label="Single"
            checked={true}
            errormsg=""
            id="give-once"
            label=""
            onClick={[Function]}
            type="radio"
            value="Single"
          />
          <label
            className="c14"
            htmlFor="give-once"
          >
            Single
          </label>
          <input
            aria-label="Monthly"
            checked={false}
            errormsg=""
            id="give-monthly"
            label=""
            onClick={[Function]}
            type="radio"
            value="Monthly"
          />
          <label
            className="c15"
            htmlFor="give-monthly"
          >
            Monthly
          </label>
          <span
            className="c16 c17"
          />
        </div>
      </div>
      <form
        className="c18"
        onSubmit={[Function]}
      >
        <fieldset
          className="c19"
        >
          <legend
            className="c20"
          >
            <span
              className="c21"
              color="inherit"
              size="l"
            >
              Choose an amount to give
            </span>
          </legend>
          <div
            className="c22"
          >
            <label
              className="c23 c24"
              htmlFor="mship-1--moneyBuy-box1"
            >
              <span
                className="c25 c26"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c27"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box1"
                  aria-label="£10"
                  className="c28"
                  id="mship-1--moneyBuy-box1"
                  name="mship-1--moneyBuy1"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 10"
                />
              </div>
              
            </label>
            <label
              className="c23 c24"
              htmlFor="mship-1--moneyBuy-box2"
            >
              <span
                className="c25 c26"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c27"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box2"
                  aria-label="£20"
                  className="c28"
                  id="mship-1--moneyBuy-box2"
                  name="mship-1--moneyBuy2"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 20"
                />
              </div>
              
            </label>
            <label
              className="c23 c24"
              htmlFor="mship-1--moneyBuy-box3"
            >
              <span
                className="c25 c26"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c27"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box3"
                  aria-label="£30"
                  className="c28"
                  id="mship-1--moneyBuy-box3"
                  name="mship-1--moneyBuy3"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 30"
                />
              </div>
              
            </label>
          </div>
          <div
            className="c29"
          >
            <span
              className="c30 c31"
              color="inherit"
              size="s"
            >
              Other amount
            </span>
            <label
              className="c23 c32"
              htmlFor="mship-1--MoneyBuy-userInput"
            >
              <span
                className="c25 c26"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£",
                  }
                }
                size="s"
              />
              <div
                className="c27"
              >
                
                <input
                  aria-describedby="mship-1--MoneyBuy-userInput"
                  aria-label="Input a different amount"
                  className="c28"
                  id="mship-1--MoneyBuy-userInput"
                  max="20000"
                  min="1"
                  name="membership_amount"
                  onChange={[Function]}
                  pattern="[^[0-9]+([,.][0-9]+)?$]"
                  placeholder="0.00"
                  required={false}
                  step="0.01"
                  type="number"
                  value=" "
                />
              </div>
              
            </label>
          </div>
          <input
            className="c33"
            type="submit"
            value="Donate once"
          />
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single donation renders correctly 1`] = `
.c9 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c10 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.25rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 1rem;
}

.c15 {
  font-size: 1.5rem;
  line-height: 1.5rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c19 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c25 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: 500;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  height: 100%;
}

.c3 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c17 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
  width: 100%;
}

.c20 {
  margin-bottom: 0.5rem;
}

.c22 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c22:focus {
  border: 1px solid #666;
}

.c21 {
  position: relative;
  font-size: 1.25rem;
}

.c18 {
  display: block;
}

.c18 input {
  border: none;
  background-color: #BECCF9;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 10px;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  height: auto;
}

.c18 input:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #0565D1;
}

.c18 input:active:focus {
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c23 {
  display: block;
}

.c23 input {
  border: none;
  background-color: #BECCF9;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 10px;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  height: auto;
  background-color: #0565D1;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
  color: #FFFFFF;
}

.c23 input:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #0565D1;
}

.c23 input:active:focus {
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c23 input:focus {
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c0 {
  background-color: #274084;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
}

.c2 {
  border: 1px solid red;
  height: calc(70px + 35vw);
}

.c5 {
  display: none;
}

.c6 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c8 {
  position: relative;
  text-align: left;
}

.c11 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c12 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 10px;
  margin-top: 1rem;
}

.c12 h3 {
  margin-top: 1rem;
}

.c12 input {
  max-width: 100%;
  margin: 0;
}

.c12 input[type='submit'] {
  margin: 2rem 0;
}

.c13 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c13 input[type='submit'] {
  margin-bottom: 0;
}

.c14 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 2rem;
}

.c16 label {
  -webkit-flex: 0 0 30%;
  -ms-flex: 0 0 30%;
  flex: 0 0 30%;
  margin-bottom: 0.5rem;
}

.c16 label input {
  cursor: pointer;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c26 {
  margin-right: 0.5rem;
}

.c27 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c27 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c27 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 10px;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c27 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c28 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c29 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c29:active,
.c29:focus,
.c29:hover {
  outline: none;
  background-color: #961D35;
}

@media (min-width:740px) {
  .c10 {
    font-size: 1.25rem;
  }
}

@media (min-width:740px) {
  .c22 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c18 input {
    font-size: 2rem;
    padding: 1.5rem;
  }
}

@media (min-width:740px) {
  .c23 input {
    font-size: 2rem;
    padding: 1.5rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: inherit;
    -webkit-justify-content: inherit;
    -ms-flex-pack: inherit;
    justify-content: inherit;
  }
}

@media (min-width:1024px) {
  .c2 {
    display: none;
  }
}

@media (min-width:1024px) {
  .c5 {
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    opacity: 0.4;
  }
}

@media (min-width:740px) {
  .c6 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c12 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c13 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c16 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {
  .c16 label {
    margin-bottom: 0;
  }
}

@media (min-width:740px) {
  .c27 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c29 {
    padding: 1rem 2rem;
  }
}

@media (min-width:740px) {

}

<div
  className="c0"
  id="mship-1"
>
  <div
    className="c1 c2"
    height="100%"
    width="100%"
  >
    <img
      alt=""
      className="c3 lazyload"
      data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
      data-sizes="auto"
      data-src={null}
      data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
      height="100%"
      src={null}
      srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      width="100%"
    />
  </div>
  <div
    className="c4 c5"
    height="100%"
    width="100%"
  >
    <img
      alt=""
      className="c3 lazyload"
      data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
      data-sizes="auto"
      data-src={null}
      data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
      height="100%"
      src={null}
      srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      width="100%"
    />
  </div>
  <div
    className="c6"
  >
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <h2
          className="c9"
          color="white"
          size="big"
        >
          Donate Now
        </h2>
        <p
          className="c10"
          color="white"
          size="m"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c11"
    >
      <form
        className="c12"
        onSubmit={[Function]}
      >
        <fieldset
          className="c13"
        >
          <legend
            className="c14"
          >
            <span
              className="c15"
              color="inherit"
              size="l"
            >
              Choose an amount to give
            </span>
          </legend>
          <div
            className="c16"
          >
            <label
              className="c17 c18"
              htmlFor="mship-1--moneyBuy-box1"
            >
              <span
                className="c19 c20"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c21"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box1"
                  aria-label="£10"
                  className="c22"
                  id="mship-1--moneyBuy-box1"
                  name="mship-1--moneyBuy1"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 10"
                />
              </div>
              
            </label>
            <label
              className="c17 c23"
              htmlFor="mship-1--moneyBuy-box2"
            >
              <span
                className="c19 c20"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c21"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box2"
                  aria-label="£20"
                  className="c22"
                  id="mship-1--moneyBuy-box2"
                  name="mship-1--moneyBuy2"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 20"
                />
              </div>
              
            </label>
            <label
              className="c17 c18"
              htmlFor="mship-1--moneyBuy-box3"
            >
              <span
                className="c19 c20"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c21"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box3"
                  aria-label="£30"
                  className="c22"
                  id="mship-1--moneyBuy-box3"
                  name="mship-1--moneyBuy3"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 30"
                />
              </div>
              
            </label>
          </div>
          <div
            className="c24"
          >
            <span
              className="c25 c26"
              color="inherit"
              size="s"
            >
              Other amount
            </span>
            <label
              className="c17 c27"
              htmlFor="mship-1--MoneyBuy-userInput"
            >
              <span
                className="c19 c20"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£",
                  }
                }
                size="s"
              />
              <div
                className="c21"
              >
                
                <input
                  aria-describedby="mship-1--MoneyBuy-userInput"
                  aria-label="Input a different amount"
                  className="c22"
                  id="mship-1--MoneyBuy-userInput"
                  max="20000"
                  min="1"
                  name="membership_amount"
                  onChange={[Function]}
                  pattern="[^[0-9]+([,.][0-9]+)?$]"
                  placeholder="0.00"
                  required={false}
                  step="0.01"
                  type="number"
                  value={20}
                />
              </div>
              
            </label>
          </div>
          <p
            className="c28"
          >
            <strong>
              £20.00 
            </strong>
            a support worker to visit 10 isolated young mums with postnatal depression in the UK.
          </p>
          <input
            className="c29"
            type="submit"
            value="Donate once"
          />
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single donation with no Money Buys renders correctly 1`] = `
.c9 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c10 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.25rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 1rem;
}

.c15 {
  font-size: 1.5rem;
  line-height: 1.5rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c19 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c4 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  height: 100%;
}

.c3 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c17 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
  width: 100%;
}

.c20 {
  margin-bottom: 0.5rem;
}

.c22 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c22:focus {
  border: 1px solid #666;
}

.c21 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  background-color: #274084;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
}

.c2 {
  border: 1px solid red;
  height: calc(70px + 35vw);
}

.c5 {
  display: none;
}

.c6 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c8 {
  position: relative;
  text-align: left;
}

.c11 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c12 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 10px;
  margin-top: 1rem;
}

.c12 h3 {
  margin-top: 1rem;
}

.c12 input {
  max-width: 100%;
  margin: 0;
}

.c12 input[type='submit'] {
  margin: 2rem 0;
}

.c13 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c13 input[type='submit'] {
  margin-bottom: 0;
}

.c14 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c18 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c18 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c18 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 10px;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c18 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c23 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c23:active,
.c23:focus,
.c23:hover {
  outline: none;
  background-color: #961D35;
}

@media (min-width:740px) {
  .c10 {
    font-size: 1.25rem;
  }
}

@media (min-width:740px) {
  .c22 {
    max-width: 290px;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: inherit;
    -webkit-justify-content: inherit;
    -ms-flex-pack: inherit;
    justify-content: inherit;
  }
}

@media (min-width:1024px) {
  .c2 {
    display: none;
  }
}

@media (min-width:1024px) {
  .c5 {
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    opacity: 0.4;
  }
}

@media (min-width:740px) {
  .c6 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c12 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c13 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c18 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c23 {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
  id="mship-1"
>
  <div
    className="c1 c2"
    height="100%"
    width="100%"
  >
    <img
      alt=""
      className="c3 lazyload"
      data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
      data-sizes="auto"
      data-src={null}
      data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
      height="100%"
      src={null}
      srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      width="100%"
    />
  </div>
  <div
    className="c4 c5"
    height="100%"
    width="100%"
  >
    <img
      alt=""
      className="c3 lazyload"
      data-lowsrc="http://images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=100&h=50&q=100"
      data-sizes="auto"
      data-src={null}
      data-srcset="//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=200&h=150&q=50 200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=400&h=300&q=50 400w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=800&h=600&q=50 800w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1200&h=900&q=50 1200w,//images.ctfassets.net/zsfivwzfgl3t/Yq59XdwwQgjNOxky93K1Q/17c2d80dce99067b0b3508f33075cbe3/funding_4-3_2x.jpg?w=1440&h=1080&q=50 1440w"
      height="100%"
      src={null}
      srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      width="100%"
    />
  </div>
  <div
    className="c6"
  >
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        <h2
          className="c9"
          color="white"
          size="big"
        >
          Donate Now
        </h2>
        <p
          className="c10"
          color="white"
          size="m"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c11"
    >
      <form
        className="c12"
        onSubmit={[Function]}
      >
        <fieldset
          className="c13"
        >
          <legend
            className="c14"
          >
            <span
              className="c15"
              color="inherit"
              size="l"
            >
              Enter an amount to give
            </span>
          </legend>
          <div
            className="c16"
          >
            <label
              className="c17 c18"
              htmlFor="mship-1--MoneyBuy-userInput"
            >
              <span
                className="c19 c20"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£",
                  }
                }
                size="s"
              />
              <div
                className="c21"
              >
                
                <input
                  aria-describedby="mship-1--MoneyBuy-userInput"
                  aria-label="Input a different amount"
                  className="c22"
                  id="mship-1--MoneyBuy-userInput"
                  max="20000"
                  min="1"
                  name="membership_amount"
                  onChange={[Function]}
                  pattern="[^[0-9]+([,.][0-9]+)?$]"
                  placeholder="0.00"
                  required={false}
                  step="0.01"
                  type="number"
                  value=" "
                />
              </div>
              
            </label>
          </div>
          <input
            className="c23"
            type="submit"
            value="Donate"
          />
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;
